# mogura

./: .gitignore  .pre-commit-config.yaml  :  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  deny.toml  index.html  mogura-4205b6a31d391e43.js  mogura-d8b17c3486e81812.js  mogura-wasm-2579576e99b6bc81.js  mogura-wasm-4ec0981f48d13a12.js  mogura-wasm-a8f42a602b529d7f.js  mogura-wasm-b43b417c62ac418d.js  mogura-wasm-c2524d9ba1927c0f.js  mogura-wasm-e3ce55bd2b6f25ef.js  typos.toml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: cd.yml  release.yml
bevy-mogura/: Cargo.toml  README.md
bevy-mogura-trackball/: Cargo.toml
bevy-mogura/src/: camera.rs  gui.rs  lib.rs  light.rs  structure.rs  trajectory.rs
examples/: README.md
mogura-asl/: Cargo.toml  README.md
mogura-asl/src/: lib.rs
mogura-cli/: Cargo.toml  README.md
mogura-cli/src/: arg.rs  main.rs
mogura-io/: Cargo.toml  README.md
mogura-io/src/: lib.rs
mogura-io/src/structure_data/: gro.rs  mod.rs  pdb.rs
mogura-io/src/trajectory_data/: mod.rs  xtc.rs
mogura-select/: Cargo.toml
mogura-ss/: Cargo.toml  README.md
mogura-ss/src/: dssp.rs  lib.rs  rama.rs
mogura-wasm/: Cargo.toml  README.md  index.html
mogura-wasm/src/: main.rs
src/: arg.rs  bond.rs  camera.rs  egui_gui.rs  lib.rs  light.rs  main.rs  model.rs  molecules.rs  pdb.rs  plugins.rs  prelude.rs  quaternion.rs  settings.rs
src/shader/: shader.wgsl
