[workspace]
resolver = "2"
members = [
    "mogura-io",
    "bevy-mogura",
    "mogura-cli",
    "mogura-wasm",
]

default-members = [
    "mogura-io",
    "bevy-mogura",
    "mogura-cli",
    "mogura-wasm",
]

[workspace.package]
name = "mogura"
version = "0.1.0"
edition = "2021"
authors = ["th"]
description = "A molecular visualizer in Rust"

[workspace.dependencies]
bevy-mogura = { path = "./bevy-mogura/" }
mogura-io = { path = "./mogura-io/" }
mogura-cli = { path = "./mogura-cli/" }
mogura-wasm = { path = "./mogura-wasm/" }
bevy = "0.15.0"
clap = { version = "3.2.22", features = ["derive"]  }
pdbtbx = "0.11.0"
bevy_trackball = { git = "https://github.com/qu1x/bevy_trackball.git", branch = "main" }
anyhow = "1.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
bevy_egui = "0.31.0"
egui = "0.29"
rfd = "0.13.0"
# bevy_file_dialog = { git = "https://github.com/richardhozak/bevy_file_dialog.git", branch = "main" }



[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 3
