[workspace]
resolver = "2"
members = [
    "mogura-io",
    "mogura-ss",
    "mogura-asl",
    "bevy-mogura",
    "mogura-cli",
    "mogura-wasm",
]

default-members = [
    "mogura-io",
    "mogura-ss",
    "mogura-asl",
    "bevy-mogura",
    "mogura-cli",
    "mogura-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["th https://github.com/th2ch-g"]
description = "A molecular visualizer in Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mogura-rs"
keywords = [
    "molecule",
    "visualization",
    "protein",
    "graphics",
    "bioinformatics",
]
repository = "https://github.com/mogura-rs/mogura"
rust-version = "1.85.0"

[workspace.dependencies]
# remove unnecessary features
bevy = { version = "0.15.3", default-features = false, features = [
    "android-game-activity",
    "android_shared_stdcxx",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgpu",
    "x11",
] }
clap = { version = "4.5.31", features = ["derive"] }
pdbtbx = "0.12.0"
groan_rs = "0.9.0"
bevy_trackball = { git = "https://github.com/qu1x/bevy_trackball.git", rev = "95e4273" }
anyhow = "1.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
bevy_egui = "0.31.0"
egui = "0.29"
rfd = "0.15.2"
# log = { version = "0.4.25", features = ["max_level_debug", "release_max_level_warn"] }
nom = "8.0.0"
itertools = "0.14.0"

# run: `cargo-test` to generate git-hooks
# cargo-husky = { version = "1.5.0", default-features = false, features = ["precommit-hook", "run-cargo-clippy", "run-cargo-check", "run-cargo-fmt", "run-cargo-test"] }

[profile.release]
opt-level = "s"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
