[package]
name = "bevy-mogura"
description = "A plugin for molecular graphic visualization"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
bevy.workspace = true
bevy_trackball.workspace = true
mogura-io = { path = "../mogura-io", optional = true }
bevy_egui.workspace = true
egui.workspace = true
rfd.workspace = true
log.workspace = true

[features]
default = ["mogura-io/default"]
groan_rs = ["mogura-io/groan_rs"]
