[package]
name = "mogura-cli"
description = "mogura command-line-interface"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
clap.workspace = true
bevy-mogura = { path = "../bevy-mogura", features = ["groan_rs"] }

[[bin]]
name = "mogura"
path = "src/main.rs"
