[package]
name = "mogura-cli"
description = "mogura command-line-interface"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy.workspace = true
clap.workspace = true
bevy-mogura = { path = "../bevy-mogura", optional = true }

[features]
default = ["bevy-mogura/groan_rs"]
no_groan_rs = ["bevy-mogura/default"]


[[bin]]
name = "mogura"
path = "src/main.rs"
