[package]
name = "mogura-io"
version = "0.1.0"
description = "data IO processor on mogura"
edition.workspace = true

[dependencies]
pdbtbx.workspace = true
reqwest.workspace = true
anyhow.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.55", features = ["Document", "Window", "Element", "Headers", "Request", "RequestInit", "RequestMode", "Response"] }
gloo = "0.5.0"
