[package]
name = "mogura-io"
description = "data IO processor on mogura"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
pdbtbx.workspace = true
groan_rs = { workspace = true, optional = true }
reqwest.workspace = true
anyhow.workspace = true

[features]
default = []
groan_rs = ["dep:groan_rs"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.55", features = ["Document", "Window", "Element", "Headers", "Request", "RequestInit", "RequestMode", "Response"] }
gloo = "0.5.0"
